# BDBot

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Comics_details.py  README.md  Web_requests_manager.py  bdbot_manager.py  comic_details_manager.py  keepalive.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  utils.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  comic-request.md  documentation-change.md
.github/workflows/: codeql-analysis.yml
Scripts/: BDbot.py  CH.py  Comics.py  DailyPoster.py  Errors.py  Garfield.py  Help.py  Time_manager.py  Web_requests_manager.py  XKCD.py
bdbot/: Embed.py  Web_requests_manager.py  __main__.py  actions.py  bdbot_manager.py  cache.py  discord_utils.py  embed.py  exceptions.py  field.py  files.py  help.py  mention.py  subscription_type.py  time.py  utils.py
bdbot/cogs/: AutomaticPoster.py  BDbot.py  Comics.py  Errors.py  HelpCommands.py
bdbot/comics/: __init__.py  base.py  comic_detail.py  comicskingdom.py  custom.py  gocomics.py  webtoons.py
bdbot/db/: __init__.py  discord_subscription.py  subscription.py
bdbot/db/models/: comic.py  discord_subscription.py  subscription.py
bdbot/discord/: bot_request.py  discord_utils.py  exceptions.py  multi_page_view.py  response_sender.py
bdbot/discord/cogs/: AutomaticPoster.py  BDbot.py  Comics.py  HelpCommands.py
bdbot/discord_/: bot_request.py  client.py  discord_utils.py  exceptions.py  multi_page_view.py  response_sender.py
bdbot/discord_/cogs/: AutomaticPoster.py  BDbot.py  Comics.py  HelpCommands.py
bdbot/misc/: ADD_COMIC.md  comics_details.json  comics_not_ready.json  help_embeds.json  random-footers.txt  retired_comics.json  runbdbot  runbdbot.service
misc/: ADD_COMIC.md  comics_details.json  comics_details.jsonc  gmng_footers.txt  random-footers.txt
src/: Web_requests_manager.py  discord_utils.py  main.py  requirements.txt  utils.py
src/Scripts/: AutomaticPoster.py  BDbot.py  Comics.py  DailyPoster.py  Errors.py  Help.py  HelpCommands.py
src/misc/: ADD_COMIC.md  comics_details.json  comics_not_ready.json  databaseSchema.json  random-footers.txt
