[project]
name = "bdbot"
version = "5.0.4"
description = "A discord bot that post comics strip."
readme = "README.md"
authors = [
    { name = "Arik", email = "BBArik@protonmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.6.4",
    "requests>=2.32.3",
    "requests-htmlc>=0.0.8",
    "rss-parser>=2.1.1",
    "beautifulsoup4>=4.12.3",
    "python-dotenv>=1.1.1",
    "randomtimestamp>=2.3",
    "inquirerpy>=0.3.4",
    "tortoise-orm>=0.25.1",
    "tortoise-cli>=0.2.0",
]

[project.license]
text = "GPL 3.0"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "Flake8-pyproject>=1.2.3",
    "tomli_w",
]

[project.scripts]
bdbot = "bdbot.__main__:main"
bdbot_manager = "bdbot.bdbot_manager:main"

[build-system]
requires = [
    "setuptools>=80.8.0",
    "setuptools-scm>=8.3.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "bdbot",
]

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
]

[dependency-groups]
dev = [
    "tomli-w>=1.2.0",
]
